2005-03-12  Dom Lachowicz <cinamod@hotmail.com>

	* *.c: Conditional processing inside of <switch> seems to work now
	
2005-03-10  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.c, rsvg-structure.c: Merged rsvg_start_svg and rsvg_start_sub_svg into a single cohesive thing
	* rsvg-private.c: removed new_width and new_height. Now on-screen dimentions are not in the handle at all, they are loaded from the callback when the pixbuf is aquired.
	* rsvg.c, rsvg-paint-server.c: moved paint server stuff to where you'd expect to find it.

2005-03-09  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bug #169720
	* moz-plugin/Makefile.am: ditto
	
2005-03-03  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-art-composite.c: make clippaths work again
	* rsvg-art-draw.c, rsvg-marker.c: moved marker rendering away from the 
	backend
	* rsvg-art-composite.c: simplified background composition into 
	something a little more readable

2005-03-02  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-image.c: Bug #169051, from Ed Catmur <ed@catmur.co.uk>
	
2005-02-26  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-private.h: Move M_PI's definition here
	* rsvg-private.h: Add rsvg_render_free ()
	* rsvg-art-render.c: 2 implementations of ^^
	* *: Changes to pass RsvgBpathDefs instead of "const char * d" to renders
	* TODO: update to reflect some of the work remaining
	
2005-02-25  Dom Lachowicz <cinamod@hotmail.com>

	* *: Get rid of deprecated stuff.
	* *: Get rid of more libart data structures
	* configure.in: Bump version number
	
2005-02-25  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-paint-server.c: more de-artification of the core

2005-02-23  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-image.c: Fix bug #168182
	* test-display.c: rsvg-view now can view images on any medium that
	gnome-vfs can see.
	* *: Deprecate rsvg-gz. Move its functionality directly into RsvgHandle instead.
	Greatly simplifies much code.
	* rsvg-affine.c: Steal libart's matrix affine code