@@ -80,10 +80,10 @@ static void
 rsvg_art_paint_server_solid_render (RsvgSolidColour *z, ArtRender *ar,
 									const RsvgPSCtx *ctx)
 {
+	ArtPixMaxDepth color[3];
 	guint32 rgb = z->rgb;
 	if (z->currentcolour)
 		rgb = rsvg_state_current(ctx->ctx)->current_color;
-	ArtPixMaxDepth color[3];
 	
 	color[0] = ART_PIX_MAX_FROM_8 (rgb >> 16);
 	color[1] = ART_PIX_MAX_FROM_8 ((rgb >> 8) & 0xff);
